--- a/QuanLySinhVien/QuanLySinhVien.csproj
+++ b/QuanLySinhVien/QuanLySinhVien.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection.cs" />
+    <Compile Include="CustomCTCV.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CustomCTCV.Designer.cs">
+      <DependentUpon>CustomCTCV.cs</DependentUpon>
+    </Compile>
     <Compile Include="CustomCV.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -141,6 +147,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="CustomCTCV.resx">
+      <DependentUpon>CustomCTCV.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CustomCV.resx">
       <DependentUpon>CustomCV.cs</DependentUpon>
     </EmbeddedResource>
